fix: stop note toolbar overflow on older chrome versions (fix #32)

--- a/src/widgets/note-list/ui/sort-button/SortButton.module.css
+++ b/src/widgets/note-list/ui/sort-button/SortButton.module.css
@@ -1,7 +1,5 @@
 .sortButton {
 	flex-shrink: 0;
-	height: 100%;
-	aspect-ratio: 1;
 	background-color: var(--bg-color-primary);
 }
 
